# aquismart-v1

./: .gitignore  Landing Page.pptx  README.md  REVERT-GUIDE.md  bizbuysell_complete_scraper.py  bizbuysell_scraper_v2.py  docker-compose.dev.yml  docker-compose.yml  extracted_text.txt  generate_mock_businesses.py  next.config.mjs  package-lock.json  package.json  plan.md
app/: layout.tsx  (+1 more)
backend/: Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml  requirements-core.txt  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: auth.py  deps.py  documents.py  health.py  listings.py  ndas.py  payments.py  router.py  users.py  webhooks.py
backend/app/db/: __init__.py  base.py  opensearch.py  redis.py  session.py
backend/app/models/: __init__.py  analytics.py  inquiry.py  listing.py  nda.py  subscription.py  user.py  valuation.py
backend/app/schemas/: __init__.py  auth.py  document.py  listing.py  nda.py  payment.py  user.py
backend/migrations/: env.py
backend/migrations/versions/: 20241222_000000_001_initial_schema.py
backend/platform-gateway/: Dockerfile  package.json
backend/platform-gateway/src/: index.ts
backend/svc-ai-document/: Dockerfile  requirements.txt
backend/svc-ai-entities/: Dockerfile  requirements.txt
backend/svc-ai-risk/: requirements.txt
backend/svc-ai-valuation/: requirements.txt
backend/svc-catalog/: package-lock.json  package.json  schema.sql
backend/svc-ingestion/: package.json
backend/svc-monitoring/: package.json
backend/svc-reporting/: package.json
backend/svc-valuation/: package.json
(+139 files in other folders)
